fix: gap between form rows

--- a/css/index.css
+++ b/css/index.css
@@ -151,6 +151,9 @@ input:focus {
 }
 
 .form-content {
+  display: flex;
+  flex-direction: column;
   padding-bottom: 20px;
   box-shadow: 0px 5px 5px -2px rgba(0, 0, 0, 0.2);
+  gap: 25px;
 }
